fix: data console design - white-space nowrap - width - overflow-x

--- a/index.css/style.css
+++ b/index.css/style.css
@@ -19,8 +19,9 @@
     background: rgb(0 0 0 / 90%);
     color: white;
 
-    white-space: normal;
-    word-break: break-all;
+    white-space: nowrap;
+    width: 100%;
+    overflow-x: auto;
 }
 
 
